<resources>
    <string name="app_name">Offline dictionary</string>
    <string name="text_word">word: %s</string>
    <string name="text_wordtype">type: %s</string>
    <string name="text_description">Description: %s</string>

    <string name="menu_search">Search</string>
    <string name="menu_redownload">Redownload</string>
    <string name="menu_clear_history">Clear history</string>
    <string name="menu_settings">Settings</string>

    <string name="fab_search">Search</string>
    <string name="app_label">Search</string>
    <string name="search_hint">Search</string>
    <string name="cancel_btn">X</string>
    <string name="hint_search">search</string>
    <string name="btn_ok">OK</string>
    <string name="txt_downloading_word">Downloading word %s</string>

    <string name="txt_list_empty">List empty. Tap to search...</string>

    <string name="text_word_size">Word size</string>
    <string name="down_imageview">Down imageview</string>
    <string name="up_imageview">up_imageview</string>
    <string name="text_wordtype_size">Wordtype size</string>

    <string name="name_shared_preferences">DefaultSharedPreferences</string>
    <string name="key_word_size">TextWordSize</string>
    <string name="key_wordtype_size">TextWordTypeSize</string>

</resources>